enhance: Replace WebviewKO with JCEF on desktop